@@ -12,6 +12,8 @@ import java.lang.reflect.Field;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
+import java.util.Map;
+import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.atomic.AtomicLong;
 
 /**
@@ -53,6 +55,9 @@ import java.util.concurrent.atomic.AtomicLong;
 public class CommandParameter {
 
     private static final AtomicLong ENUM_COUNTER = new AtomicLong();
+    private static final Map<EnumSignature, String> ENUM_NAMES = new ConcurrentHashMap<>();
+
+    private record EnumSignature(String name, List<String> values) {}
 
     /**
      * An empty array of CommandParameter, used for commands with no arguments.
@@ -214,7 +219,7 @@ public class CommandParameter {
      * @see #newEnum(String, boolean, CommandEnum)
      */
     public static CommandParameter newEnum(String name, boolean optional, String[] values) {
-        return newEnum(name, optional, new CommandEnum(name + "Enums_" + ENUM_COUNTER.incrementAndGet(), values));
+        return newEnum(name, optional, values, false);
     }
 
     /**
@@ -228,7 +233,9 @@ public class CommandParameter {
      * @see #newEnum(String, boolean, CommandEnum)
      */
     public static CommandParameter newEnum(String name, boolean optional, String[] values, boolean soft) {
-        return newEnum(name, optional, new CommandEnum(name + "Enums_" + ENUM_COUNTER.incrementAndGet(), Arrays.asList(values), soft));
+        String enumName = soft ? name + "Enums_" + ENUM_COUNTER.incrementAndGet()
+                : ENUM_NAMES.computeIfAbsent(new EnumSignature(name, List.copyOf(Arrays.asList(values))), ignored -> name + "Enums_" + ENUM_COUNTER.incrementAndGet());
+        return newEnum(name, optional, new CommandEnum(enumName, Arrays.asList(values), soft));
     }
 
     /**
@@ -327,6 +334,22 @@ public class CommandParameter {
         return result;
     }
 
+    public boolean isRestOfLine() {
+        return this.enumData == null
+                && (this.type == CommandParamType.MESSAGE
+                || this.type == CommandParamType.MESSAGE_ROOT
+                || this.type == CommandParamType.MESSAGE_EXP);
+    }
+
+    public CommandParameter asRequired() {
+        if (!this.optional) {
+            return this;
+        }
+        final CommandParameter copy = new CommandParameter(this.name, false, this.type, this.enumData, this.postFix, this.paramNode);
+        copy.paramOptions = this.paramOptions;
+        return copy;
+    }
+
     public CommandParamData toNetwork() {
         final CommandParamData data = new CommandParamData();
         data.setName(this.name);
@@ -336,6 +359,9 @@ public class CommandParameter {
             CommandParamType type = this.type;
             if (type == null) {
                 type = CommandParamType.RAW_TEXT;
+            }
+            if (type == CommandParamType.MESSAGE) {
+                type = CommandParamType.MESSAGE_ROOT;
             }
             final Field field = CommandParam.class.getDeclaredField(type.name());
             final CommandParam param = (CommandParam) field.get(null);
